# dirk-tools

./: .gitignore  Dockerfile  README.md  build.sh  config.sample.yml  pyproject.toml
dirk_tools/: main.py
dirk_tools/commands/: signing.py
